# Camera_All_in_one

Zavrsni/: Zavrsni2025_pracenje_povrsinskih_vozila.doc  Zavrsni2025_pracenje_povrsinskih_vozila.docx  Zavrsni2025_pracenje_povrsinskih_vozila_new.docx  ~$vrsni2025_pracenje_povrsinskih_vozila.docx  ~$vrsni2025_pracenje_povrsinskih_vozila_new.docx  ~WRL0001.tmp  ~WRL2422.tmp
Zavrsni/awCameraLocalization-main/: .gitignore  CMakeLists.txt  CMakeLists_edit.txt  CMakePresets.json  README.md  vcpkg.json
Zavrsni/awCameraLocalization-main/Arduino_codes/Test1Led/: Test1Led.ino
Zavrsni/awCameraLocalization-main/include/: AwGui.hpp  Class1.hpp  Class2.hpp  Class_1.hpp  Class_2.hpp  Class_base.hpp  Connection.hpp  ConnectionBase.hpp  ConnectorBase.hpp  ConnectorIn.hpp  ConnectorOut.hpp  ElementFactory.hpp  Enums.hpp  FrameBase.hpp  FrameCam.hpp  FrameCustom.hpp  FrameRelation.hpp  GlobalParams.hpp  Message.hpp  MessageBase.hpp  Mytemplate.hpp  NodeArucoTracking.hpp  NodeBackgroundSubstraction.hpp  NodeBase.hpp  NodeBaseChat.hpp  NodeBlobCreator.hpp  NodeBlobGrouper.hpp  NodeDelayMesurmente.hpp  NodeInflate.hpp  NodeManualExtrinsic.hpp  NodeSource.hpp  NodeSourceStream.hpp  NodeTest.hpp  NodeTest2.hpp  SimpleClass.hpp  SpatialState.hpp  Structs.hpp  TemplateExample.hpp  TemplateExample.tpp  Util.hpp
Zavrsni/awCameraLocalization-main/src/: BlobGrouper.cpp  Connection.tpp  ConnectionBase.cpp  ConnectorBase.cpp  ConnectorIn.tpp  ConnectorOut.tpp  ElementFactory.cpp  FrameBase.cpp  FrameCam.cpp  FrameCustom.cpp  FrameRelation.cpp  GlobalParams.cpp  Message.tpp  MessageBase.cpp  NodeArucoTracking.cpp  NodeBackgroundSubstraction.cpp  NodeBase.cpp  NodeBlobCreator.cpp  NodeBlobGrouper.cpp  NodeDelayMesurmente.cpp  NodeInflate.cpp  NodeManualExtrinsic.cpp  NodeSource.cpp  NodeSourceStream.cpp  NodeTest.cpp  NodeTest2.cpp  SpatialSpace.cpp  camList.py  heatmap.py  main.cpp  test.py
Zavrsni/testing/LABUST_Params/: globalParams.json
